[package]
name = "sd-blip-attraction"
version = "0.1.0"
authors = ["Chandrasekhar Ramakrishnan <ciyer@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
accelerate-src = { version = "0.3.2", optional = true }
base64 = { version = "0.22.1", optional = true }
# add features = ["metal"] to candle to use Apple GPUs
candle = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", package = "candle-core", optional = true }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", optional = true }
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", optional = true }
# add features = ["metal"] to candle-transformers to use Apple GPUs
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", optional = true }
clap = { version = "4.5.3", features = ["derive"], optional = true }
cudarc = { version = "0.11.0", features = ["f16"], optional = true }
dioxus = { version = "0.5", features = ["fullstack", "router"] }
hf-hub = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", features = [
    "mkl-static-lp64-iomp",
], optional = true }
image = "0.25.0"
metal = { version = "0.28.0", features = ["mps"], optional = true }
serde = { version = "1.0.197", features = ["derive"] }
tokenizers = { version = "0.19.1", default-features = false, optional = true }
tokio = "1.37.0"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"

dioxus-logger = "0.5.0"
# Debug
log = "0.4.19"
tracing = "0.1.40"
gloo-utils = "0.2.0"

[dev-dependencies]
anyhow = "1.0.81"

[build-dependencies]
anyhow = "1.0.81"
bindgen_cuda = { version = "0.1.1", optional = true }

[features]
default = []
mkl = [
    "dep:intel-mkl-src",
    "candle/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
]
server = [
    "dioxus/axum",
    "dep:base64",
    "dep:candle",
    "dep:candle-examples",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:clap",
    "dep:hf-hub",
    "dep:tokenizers",
]
web = ["dioxus/web"]
accelerate = [
    "dep:accelerate-src",
    "candle/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
cuda = [
    "candle/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:bindgen_cuda",
    "dep:cudarc",
]
cudnn = ["candle/cudnn"]
metal = ["candle/metal", "candle-nn/metal", "candle-metal-kernels", "dep:metal"]
